<resources>
    <string name="app_name">ReacTown</string>
    <string name="btnLoguear">Iniciar Sesion</string>
    <string name="tvRegister">¿No tienes cuenta? ¡CREALA!</string>
    <string name="etMailLogin">Inserta tu correo electronico</string>
    <string name="etPasswordLogin">Inserta tu contraseña</string>
    <string name="loginLogin">Logo Principal</string>
    <string name="etNombreRegistro">Inserta tu nombre</string>
    <string name="btnRegistro">Registrar</string>
    <string name="tvPassOlvidada">¿Has olvidado la contraseña? ¡Click Aquí!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvYaCuenta">¿Ya tienes cuenta? ¡Click Aquí!</string>
    <string name="menuLogOut">logOut</string>
    <string name="menuAddList">addList</string>
    <string name="nombreSugerencia">Nombre Sugerencia</string>
    <string name="etNombreSugerencia">Nombre descriptivo</string>
    <string name="tvDescripcion">Descripcion</string>

    <string name="etDescripcion">Describe tu sugerencia</string>
    <string name="btnInsertarDescripcion">Insertar descripcion</string>
    <string name="btnSubirArchivo">SELECT</string>
    <string name="btnRecuperar">Enviar Recuperacion</string>
    <string name="textoRecuperacion">Introduce tu email. Si existe en el sistema, te llegara un correo.</string>
    <string name="btnVolver">Volver</string>
    <string name="btnInfoRecyVolver">Volver</string>
    <string name="menuPanelUsuario">Editar Usuario</string>
    <string name="PanelUsuarioTitulo1">Cambiar Correo</string>
    <string name="panelUsuarioTitulo2">Cambiar Contraseña</string>
    <string name="panelUsuarioExplicacionContraseña">Al darle al boton se enviará un correo electronico a tu cuenta, y se cerrara la sesion.</string>
    <string name="panelUsuarioExplicacionCorreo">Al darle al boton se se cambiará el correo electronico, y se cerrara la sesion.</string>
    <string name="btnPanelUsuarioPassword">Cambio Contraseña</string>
    <string name="etPanelUsuarioCorreo">Introduce un correo nuevo</string>
    <string name="btnPanelUsuarioCorreo">Cambiar Correo</string>
    <string name="recyclerView">No Datos</string>
    <string name="mDeleteAdmin">Delete</string>
    <string name="noDatos">No Datos</string>
    <string name="creadoPor">Creado por Jose Fons</string>
    <string name="descripcionApp">Creada para proyecto DAM 2020. Codigo Libre.</string>
    <string name="linkGit">github.com/josefoons/ReacTown</string>
    <string name="mInfoApp">Info</string>
    <string name="mListaUsuarios">Lista Usuarios</string>
    <string name="listaUsuarios_Titulo">Lista Usuario</string>
    <string name="listaUsuarios_Descripcion">Hola señor Administrador, esta en una zona delicada de la aplicacion, aqui estan todos los usuarios, aqui podra administrarlos. Todo lo que haga aqui perjudicara a el resto de la aplicacion, asi que vaya con cuidado.</string>
    <string name="listaUsuarios_botonVolver">VOLVER</string>
    <string name="listaUsuarioVentana_Descripcion">Elige que hacer</string>
    <string name="listaUsuarioVentana_Permiso">Permiso</string>
    <string name="listaUsuarioVentana_Borrar">Borrar</string>
    <string name="btnPanelUsuarioBorrar">ADELANTE!</string>
    <string name="panelUsuarioTitulo3">¡CUIDADO! Si aprietas este boton, procederas a borrar tu cuenta y no podras volver a acceder al sistema a menos que te vuelvas a registrar. Piensa lo que haces.</string>
    <string name="btnListadoFiltroPropio">Propios</string>
    <string name="btnListadoFiltroTodos">Todos</string>
    <string name="panelUsuarioTituloCuenta">¡BORRADO!</string>

</resources>
